[gd_scene load_steps=2 format=3 uid="uid://chj57qgs46mya"]

[ext_resource type="Script" path="res://scenes/ScorePanel.gd" id="1_imqm5"]

[node name="ScorePanel" type="VBoxContainer"]
script = ExtResource("1_imqm5")

[node name="Label" type="Label" parent="."]
offset_right = 288.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_top = 41.0
offset_right = 288.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 24
text = "1000"
horizontal_alignment = 1

[node name="CorrectGuessesLabel" type="Label" parent="."]
offset_top = 82.0
offset_right = 288.0
offset_bottom = 119.0
theme_override_font_sizes/font_size = 24
text = "99"
horizontal_alignment = 1

[node name="HiScoreLabel" type="Label" parent="."]
offset_top = 123.0
offset_right = 288.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 24
text = "HI - 1000"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 164.0
offset_right = 288.0
offset_bottom = 168.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 172.0
offset_right = 288.0
offset_bottom = 250.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
offset_right = 150.0
offset_bottom = 78.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
offset_right = 150.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "MAX COMBO"
horizontal_alignment = 1

[node name="MaxComboLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 41.0
offset_right = 150.0
offset_bottom = 78.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "9999"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
offset_left = 154.0
offset_right = 158.0
offset_bottom = 78.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 162.0
offset_right = 288.0
offset_bottom = 78.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
offset_right = 126.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "MAX MULT"
horizontal_alignment = 1

[node name="MaxMultiplierLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
offset_top = 41.0
offset_right = 126.0
offset_bottom = 78.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "9999"
horizontal_alignment = 1
